--- a/.github/workflows/service-deploy.yaml
+++ b/.github/workflows/service-deploy.yaml
@@ -20,17 +20,19 @@ jobs:
       - name: SSH to EC2 instance
         run: |
           echo "$SSH_PRIVATE_KEY" > mykey.pem
-          chmod 600 mykey.pem
+          chmod 400 mykey.pem
 
+      - name: Ensure the app directory exists on EC2
+        run: |
+          ssh -i mykey.pem -o StrictHostKeyChecking=no ubuntu@$EC2_PUBLIC_IP "mkdir -p ~/app"
           
-          # Copy the files from the current work dir into the EC2 instance, under `~/app`.
-          scp -o StrictHostKeyChecking=no -i mykey.pem -r * ubuntu@$EC2_PUBLIC_IP:~/NetflixMovieCatalog
+          # Copy the files from the current work dir into the EC2 instance, under ~/app.
+          scp -o StrictHostKeyChecking=no -i mykey.pem -r * ubuntu@$EC2_PUBLIC_IP:~/app
           
-          # Connect to your EC2 instance and execute the `deploy.sh` script (this script is part of the repo files). 
-          # TODO You need to implement the `deploy.sh` script yourself.
+          # Connect to your EC2 instance and execute the deploy.sh script (this script is part of the repo files). 
+          # TODO You need to implement the deploy.sh script yourself.
           #
           # Upon completion, the NetflixMovieCatalog app should be running with its newer version. 
           # To keep the app running in the background independently on the terminal session you are logging to, configure it as a Linux service.
     
-          ssh -i mykey.pem ubuntu@$EC2_PUBLIC_IP "bash ~/NetflixMovieCatalog/deploy.sh"
-          
+          ssh -i mykey.pem ubuntu@$EC2_PUBLIC_IP "bash ~/app/deploy.sh"
