--- a/.github/workflows/service-deploy.yaml
+++ b/.github/workflows/service-deploy.yaml
@@ -25,11 +25,11 @@ jobs:
       - name: Ensure the app directory exists on EC2
         run: |
 
-          # Copy the files from the current work dir into the EC2 instance, under ~/app.
+          # Copy the files from the current work dir into the EC2 instance, under `~/app`.
           scp -o StrictHostKeyChecking=no -i mykey.pem -r * ubuntu@$EC2_PUBLIC_IP:~/app
 
-          # Connect to your EC2 instance and execute the deploy.sh script (this script is part of the repo files). 
-          # TODO You need to implement the deploy.sh script yourself.
+          # Connect to your EC2 instance and execute the `deploy.sh` script (this script is part of the repo files). 
+          # TODO You need to implement the `deploy.sh` script yourself.
           #
           # Upon completion, the NetflixMovieCatalog app should be running with its newer version. 
           # To keep the app running in the background independently on the terminal session you are logging to, configure it as a Linux service.
